Fix Evil Icons vertical align

--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -31,5 +31,5 @@
 // Fix Evil Icons vertical align
 
 .icon {
-  vertical-align: bottom;
+  vertical-align: middle;
 }
